# Ryanair_app

./: Dockerfile  Makefile  alembic.ini  config.example.yml  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 06031070c6a7_initial_migration.py
app/: config.py  constants.py  dependencies.py  enums.py  main.py
app/api/: __init__.py  airports.py  ryanair.py  users.py
app/db/: database.py
app/db/models/: users.py
app/models/: users.py
app/services/: __init__.py  messente.py  ryanair.py
app/tasks/: ryanair_tasks.py
app/utils/: flight_formatter.py  password_hash.py
